[tool.poetry]
name = "react-native-rasa-example"
version = "0.1.0"
description = "This a sample Rasa bot"
authors = ["jonra1993 <jon_ra@hotmail.es>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7,<3.9"
rasa = {extras = ["full"], version = "^3.0.3"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
